# zip-in-memory

./: .gitignore  Cargo.toml
src/: generate_zip.rs  main.rs
