[package]
name = "test_zip"
version = "0.1.0"
edition = "2021"
publish = ["meuse"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
